Fixed(about-page): Fixed overflow hidden problem in about me page

--- a/client/pc/src/app/about/page.module.scss
+++ b/client/pc/src/app/about/page.module.scss
@@ -1,7 +1,4 @@
 .container {
-  height: calc(100vh - 2rem - 5vh);
-  overflow: hidden;
-
   header {
     display: block;
     text-align: center;
