--- a/client/pc/src/app/globals.css
+++ b/client/pc/src/app/globals.css
@@ -36,6 +36,7 @@ body {
   width: 100%;
   padding: 0;
   margin: 0;
+  overflow-x: hidden;
 }
 
 .container {
